--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./styles/jass.css" />
+    <link rel="stylesheet" href="C:\Users\z_are\Desktop\CU-VIRT-FSF-PT-01-2024-U-LOLC-main\01-HTML-Git-CSS\module6_challenge\module6challenge\jass.css" />
     <title>Weather Dashboard</title>
   </head>
 
